Separated bottom waves into left and right images to make media queries easier, and fixed issue with the div covering up links

--- a/assets/styles/home/next.less
+++ b/assets/styles/home/next.less
@@ -29,6 +29,8 @@
     margin: auto;
     padding-top: 25px;
     color: @black;
+    position: relative;
+    z-index: 10;
 
     .button {
       .lgButton(@black, @white);
