--- a/assets/styles/home/social.less
+++ b/assets/styles/home/social.less
@@ -1,6 +1,6 @@
 .sails-social {
   font-family: @mainFont;
-  background-color: @medTurquoise;
+  background-color: @turquoise;
   color: @white;
   padding: 75px 20px;
   overflow: auto;
