--- a/assets/styles/styleguide/colors.less
+++ b/assets/styles/styleguide/colors.less
@@ -20,8 +20,8 @@
 
 //Blue/green/turquoise
 @darkTurquoise: #0e6471;
-@turquoise    : #118798;
-@medTurquoise : #0b8fa2;
+@originalTurquoise : #118798;
+@turquoise    : #0b8fa2;
 @ltTurquoise  : #14acc2;
 
 @ltBlue       : #E3F0F1;
